--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-module",
-  "version": "1.0.0",
-  "description": "My new Nuxt module",
-  "repository": "your-org/my-module",
+  "name": "nuxt-kick-it",
+  "version": "1.0.1",
+  "description": "Kick Generative AI",
+  "repository": "deniskropp/nuxt-kick-it",
   "license": "MIT",
   "type": "module",
   "exports": {
