--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-kick-it",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Kick Generative AI",
   "repository": "deniskropp/nuxt-kick-it",
   "license": "MIT",
@@ -28,15 +28,17 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.8.2"
+    "@nuxt/content": "^2.9.0",
+    "@nuxt/kit": "^3.8.2",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
-    "@types/node": "^20.9.3",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.4",
     "@nuxt/schema": "^3.8.2",
     "@nuxt/test-utils": "^3.8.1",
+    "@types/node": "^20.9.3",
     "changelogen": "^0.5.5",
     "eslint": "^8.54.0",
     "nuxt": "^3.8.2",
