--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,13 @@
         "generate": "nuxi generate"
     },
     "devDependencies": {
+        "@nuxt/devtools": "^1.0.5",
+        "eslint": "^8.55.0",
+        "eslint-plugin-vue": "^9.19.2",
         "nuxt": "latest"
+    },
+    "dependencies": {
+        "@nuxt/content": "^2.9.0",
+        "@types/vue": "^2.0.0"
     }
 }
