--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-kick-it",
-  "version": "1.0.4",
-  "description": "Kick Generative AI",
+  "version": "1.1.0",
+  "description": "Generative AI for Nuxt Content",
   "repository": "deniskropp/nuxt-kick-it",
   "license": "MIT",
   "type": "module",
