--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,24 @@
 {
-  "root": true,
-  "extends": ["@nuxt/eslint-config"]
+    "root": true,
+    "extends": [
+        "@nuxt/eslint-config"
+    ],
+    "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ],
+        "vue/html-indent": [
+            "error",
+            4
+        ]
+    }
 }
