--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,14 @@
             "error",
             4
         ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "vars": "all",
+                "args": "none"
+            }
+        ],
         "quotes": [
             "error",
             "single"
