--- a/playground/package.json
+++ b/playground/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@nuxt/content": "^2.9.0",
-        "@types/vue": "^2.0.0"
+        "@types/vue": "^2.0.0",
+        "cohere-ai": "^7.6.1"
     }
 }
